tests/codegen/fail/interface/trait/argument_non_input_type.stderr
error[E0277]: the trait bound `ObjA: IsInputType<__S>` is not satisfied
  --> fail/interface/trait/argument_non_input_type.rs:10:23
   |
10 |     fn id(&self, obj: ObjA) -> &str;
   |                       ^^^^ the trait `IsInputType<__S>` is not implemented for `ObjA`
   |
   = help: the following other types implement trait `IsInputType<S>`:
             <bool as IsInputType<__S>>
             <i32 as IsInputType<__S>>
             <f64 as IsInputType<__S>>
             <Box<T> as IsInputType<S>>
             <uuid::Uuid as IsInputType<__S>>
             <url::Url as IsInputType<__S>>
             <bson::datetime::DateTime as IsInputType<__S>>
             <juniper::schema::model::DirectiveLocation as IsInputType<__S>>
           and $N others

error[E0277]: the trait bound `ObjA: FromInputValue<__S>` is not satisfied
  --> fail/interface/trait/argument_non_input_type.rs:10:23
   |
8  | #[graphql_interface]
   | -------------------- required by a bound introduced by this call
9  | trait Character {
10 |     fn id(&self, obj: ObjA) -> &str;
   |                       ^^^^ the trait `FromInputValue<__S>` is not implemented for `ObjA`
   |
   = help: the following other types implement trait `FromInputValue<S>`:
             <bool as FromInputValue<__S>>
             <i32 as FromInputValue<__S>>
             <f64 as FromInputValue<__S>>
             <Box<T> as FromInputValue<S>>
             <uuid::Uuid as FromInputValue<__S>>
             <url::Url as FromInputValue<__S>>
             <bson::datetime::DateTime as FromInputValue<__S>>
             <juniper::schema::model::DirectiveLocation as FromInputValue<__S>>
           and $N others
note: required by a bound in `Registry::<'r, S>::arg`
  --> $WORKSPACE/juniper/src/executor/mod.rs
   |
   |     pub fn arg<T>(&mut self, name: &str, info: &T::TypeInfo) -> Argument<'r, S>
   |            --- required by a bound in this associated function
   |     where
   |         T: GraphQLType<S> + FromInputValue<S>,
   |                             ^^^^^^^^^^^^^^^^^ required by this bound in `Registry::<'r, S>::arg`
